testsuite/tests/indexed-types/should_fail/T2627b.stderr

T2627b.hs:20:24: error:
    • Could not deduce: Dual (Dual b0) ~ b0
        arising from a use of ‘conn’
      from the context: (Dual a ~ b, Dual b ~ a)
        bound by the type signature for:
                   conn :: forall a b.
                           (Dual a ~ b, Dual b ~ a) =>
                           Comm a -> Comm b -> (Int, Int)
        at T2627b.hs:19:1-66
      or from: a ~ R c d
        bound by a pattern with constructor:
                   Rd :: forall c d. (c -> Comm d) -> Comm (R c d),
                 in an equation for ‘conn’
        at T2627b.hs:20:7-10
      The type variable ‘b0’ is ambiguous
    • In the expression: conn undefined undefined
      In an equation for ‘conn’:
          conn (Rd k) (Wr a r) = conn undefined undefined
